test_regress/t/t_constraint_dist_unsup.out
%Warning-CONSTRAINTIGN: t/t_constraint_dist_unsup.v:27:10: Constraint expression ignored (imperfect distribution)
                                                         : ... note: In instance 't'
   27 |        x dist {que};
      |          ^~~~
                        ... For warning description see https://verilator.org/warn/CONSTRAINTIGN?v=latest
                        ... Use "/* verilator lint_off CONSTRAINTIGN */" and lint_on around source to disable this message.
%Warning-CONSTRAINTIGN: t/t_constraint_dist_unsup.v:28:10: Constraint expression ignored (imperfect distribution)
                                                         : ... note: In instance 't'
   28 |        y dist {arr};
      |          ^~~~
%Warning-CONSTRAINTIGN: t/t_constraint_dist_unsup.v:27:10: Unsupported: randomizing this expression, treating as state
   27 |        x dist {que};
      |          ^~~~
%Warning-CONSTRAINTIGN: t/t_constraint_dist_unsup.v:28:10: Unsupported: randomizing this expression, treating as state
   28 |        y dist {arr};
      |          ^~~~
%Error: Exiting due to
